разделил интерфейс DatasourceRepository на DatasourceRepository, IntradayValueRepository, HistoryValueRepository